syntax = "proto2";

package sf.solana.block_meta.v1;

message PbUpdatePriceNoFailOnErrorArgsLayout {
  required string status = 1;
  required uint32 unused1 = 2;
  required sint64 price = 3;
  required uint64 conf = 4;
  required uint64 publish_slot = 5;
}

message PbSetMinPublishersArgsLayout {
  required uint32 minPublishers = 1;
  repeated uint32 unused1 = 2;
}

message PbDeletePublisherArgsLayout {
  required string publisher = 1;
}

message PbAddPublisherArgsLayout {
  required string publisher = 1;
}

message PbAddPriceArgsLayout {
  required int32 exponent = 1;
  required string priceType = 2;
}

message Arg {
  required string instruction_type = 1;
  optional PbUpdatePriceNoFailOnErrorArgsLayout updatePriceArgs = 2;
  optional PbUpdatePriceNoFailOnErrorArgsLayout updatePriceNoFailOnErrorArgs = 3;
  optional PbSetMinPublishersArgsLayout setMinPublishersArgs = 4;
  optional PbDeletePublisherArgsLayout deletePublisherArgs = 5;
  optional PbAddPublisherArgsLayout addPublisherArgs = 6;
  optional PbAddPriceArgsLayout addPriceArgs = 7;
}

message InputAccounts {
  optional string publisher = 1;
  optional string price = 2;
  optional string funding = 3;
  optional string signer = 4;
  optional string product = 5;
  optional string mapping = 6;
  optional string nextMapping = 7;
}

message PythOracleMeta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated PythOracleMeta data = 1;
}